// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRough Arc should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Arc
      fill="red"
      points={
        Array [
          50,
          50,
          80,
        ]
      }
    >
      <RoughConsumer
        fill="red"
        points={
          Array [
            50,
            50,
            80,
          ]
        }
        type="arc"
      />
    </Arc>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Circle should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Circle
      fill="red"
      points={
        Array [
          50,
          50,
          80,
        ]
      }
    >
      <RoughConsumer
        fill="red"
        points={
          Array [
            50,
            50,
            80,
          ]
        }
        type="circle"
      />
    </Circle>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Core should render properly 1`] = `
<canvas
  height="400"
  width="200"
/>
`;

exports[`ReactRough Core should render properly when nested within other components 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <SomeComponent>
      <div>
        Some Component 
      </div>
    </SomeComponent>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Core should render properly with children 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Circle
      fill="red"
      points={
        Array [
          50,
          50,
          80,
        ]
      }
    >
      <RoughConsumer
        fill="red"
        points={
          Array [
            50,
            50,
            80,
          ]
        }
        type="circle"
      />
    </Circle>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Core should use backgroundColor as canvas background color 1`] = `
<ReactRough
  backgroundColor="rgba(126, 255, 0, 0.1)"
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Circle
      fill="red"
      points={
        Array [
          50,
          50,
          80,
        ]
      }
    >
      <RoughConsumer
        fill="red"
        points={
          Array [
            50,
            50,
            80,
          ]
        }
        type="circle"
      />
    </Circle>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Curve should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Curve
      fill="red"
      points={
        Array [
          Array [
            10,
            528,
          ],
          Array [
            30,
            573,
          ],
          Array [
            50,
            590,
          ],
          Array [
            70,
            573,
          ],
          Array [
            90,
            528,
          ],
          Array [
            110,
            472,
          ],
          Array [
            130,
            427,
          ],
          Array [
            150,
            410,
          ],
          Array [
            170,
            427,
          ],
          Array [
            190,
            472,
          ],
          Array [
            210,
            528,
          ],
          Array [
            230,
            573,
          ],
          Array [
            250,
            590,
          ],
          Array [
            270,
            573,
          ],
          Array [
            290,
            528,
          ],
          Array [
            310,
            472,
          ],
          Array [
            330,
            427,
          ],
          Array [
            350,
            410,
          ],
          Array [
            370,
            427,
          ],
          Array [
            390,
            472,
          ],
        ]
      }
    >
      <RoughConsumer
        fill="red"
        points={
          Array [
            Array [
              10,
              528,
            ],
            Array [
              30,
              573,
            ],
            Array [
              50,
              590,
            ],
            Array [
              70,
              573,
            ],
            Array [
              90,
              528,
            ],
            Array [
              110,
              472,
            ],
            Array [
              130,
              427,
            ],
            Array [
              150,
              410,
            ],
            Array [
              170,
              427,
            ],
            Array [
              190,
              472,
            ],
            Array [
              210,
              528,
            ],
            Array [
              230,
              573,
            ],
            Array [
              250,
              590,
            ],
            Array [
              270,
              573,
            ],
            Array [
              290,
              528,
            ],
            Array [
              310,
              472,
            ],
            Array [
              330,
              427,
            ],
            Array [
              350,
              410,
            ],
            Array [
              370,
              427,
            ],
            Array [
              390,
              472,
            ],
          ]
        }
        type="curve"
      />
    </Curve>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Ellipse should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Ellipse
      fill="blue"
      points={
        Array [
          10,
          50,
          150,
          80,
        ]
      }
      stroke="red"
    >
      <RoughConsumer
        fill="blue"
        points={
          Array [
            10,
            50,
            150,
            80,
          ]
        }
        stroke="red"
        type="ellipse"
      />
    </Ellipse>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Line should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Line
      fill="blue"
      points={
        Array [
          60,
          60,
          190,
          60,
        ]
      }
      stroke="red"
    >
      <RoughConsumer
        fill="blue"
        points={
          Array [
            60,
            60,
            190,
            60,
          ]
        }
        stroke="red"
        type="line"
      />
    </Line>
  </canvas>
</ReactRough>
`;

exports[`ReactRough LinearPath should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <LinearPath
      fill="blue"
      points={
        Array [
          Array [
            690,
            130,
          ],
          Array [
            790,
            140,
          ],
          Array [
            750,
            240,
          ],
          Array [
            690,
            220,
          ],
        ]
      }
      stroke="red"
    >
      <RoughConsumer
        fill="blue"
        points={
          Array [
            Array [
              690,
              130,
            ],
            Array [
              790,
              140,
            ],
            Array [
              750,
              240,
            ],
            Array [
              690,
              220,
            ],
          ]
        }
        stroke="red"
        type="linearPath"
      />
    </LinearPath>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Path should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Path
      dataString="M80 80 A 45 45, 0, 0, 0, 125 125 L 125 80 Z"
      fill="blue"
      stroke="red"
    >
      <RoughConsumer
        dataString="M80 80 A 45 45, 0, 0, 0, 125 125 L 125 80 Z"
        fill="blue"
        stroke="red"
        type="path"
      />
    </Path>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Polygon should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Polygon
      fill="blue"
      points={
        Array [
          Array [
            690,
            130,
          ],
          Array [
            790,
            140,
          ],
          Array [
            750,
            240,
          ],
          Array [
            690,
            220,
          ],
        ]
      }
      stroke="red"
    >
      <RoughConsumer
        fill="blue"
        points={
          Array [
            Array [
              690,
              130,
            ],
            Array [
              790,
              140,
            ],
            Array [
              750,
              240,
            ],
            Array [
              690,
              220,
            ],
          ]
        }
        stroke="red"
        type="polygon"
      />
    </Polygon>
  </canvas>
</ReactRough>
`;

exports[`ReactRough Rectangle should render properly with props 1`] = `
<ReactRough
  height={400}
  width={200}
>
  <canvas
    height={400}
    width={200}
  >
    <Rectangle
      fill="blue"
      points={
        Array [
          10,
          10,
          100,
          100,
        ]
      }
      stroke="red"
    >
      <RoughConsumer
        fill="blue"
        points={
          Array [
            10,
            10,
            100,
            100,
          ]
        }
        stroke="red"
        type="rectangle"
      />
    </Rectangle>
  </canvas>
</ReactRough>
`;
